--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.6.0</version>
                 <configuration>
-                    <mainClass>org.example.Main</mainClass>
+                    <mainClass>org.example.join.Main</mainClass>
                 </configuration>
             </plugin>
         </plugins>
